--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,49 +1,14 @@
-# ============================
-# 1. Base Image
-# ============================
-FROM python:3.11-slim
+# Supabase
+SUPABASE_URL=https://<your_project_id_from supabase>.supabase.co
+SUPABASE_SERVICE_ROLE_KEY=<YOUR_SUPABASE_SERVICE_ROLE_KEY>
+SUPABASE_ANON_KEY=<YOUR_SUPABASE_ANON_KEY>
+SUPABASE_BUCKET=<BUCKET_ID>
+SUPABASE_BUCKET_NAME=<BUCKET_ID>
+SUPABASE_KEY=<SUPABASE_KEY>
+OPENAI_API_KEY=<YOUR_OPENAI_API_KEY>
 
-# ============================
-# 2. Install system dependencies
-# ============================
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    ffmpeg \
-    tesseract-ocr \
-    poppler-utils \
-    libsm6 \
-    libxext6 \
-    libgl1 \
-    build-essential \
-    libglib2.0-0 \
-    && rm -rf /var/lib/apt/lists/*
+# FastAPI config
+VITE_API_BASE_URL=http://localhost:8000   # frontend will read this
+DEBUG=True
 
-# ============================
-# 3. Set work directory
-# ============================
-WORKDIR /app
-
-# ============================
-# 4. Copy requirements first (better caching)
-# ============================
-COPY requirements.txt /app/requirements.txt
-
-# ============================
-# 5. Install Python dependencies
-# ============================
-RUN pip install --no-cache-dir -r /app/requirements.txt
-
-# ============================
-# 6. Copy application code
-# ============================
-COPY . /app
-
-# ============================
-# 7. Expose default port (Cloud Run uses $PORT)
-# ============================
-EXPOSE 8080
-
-# ============================
-# 8. Start FastAPI with Uvicorn
-# Cloud Run will inject PORT (usually 8080)
-# ============================
-CMD exec uvicorn app.main:app --host 0.0.0.0 --port ${PORT}
+GOOGLE_APPLICATION_CREDENTIALS=<PATH_TO_YOUR_SERVICE_JSON>service_account.json
