--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,11 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "dev:backend": "powershell -NoProfile -ExecutionPolicy Bypass -Command \"Set-Location -Path ../backend; . .venv\\Scripts\\Activate.ps1; uvicorn backend.main:app --reload --port 8000\"",
-    "start": "concurrently \"npm run dev\" \"npm run dev:backend\""
+    "start": "concurrently \"\frontend\npm run dev\" \"npm run dev:backend\""
   },
   "dependencies": {
+    "@ffmpeg/ffmpeg": "^0.12.10",
+    "@ffmpeg/util": "^0.12.1",
     "@tailwindcss/vite": "^4.1.14",
     "@tanstack/react-query": "^5.90.2",
     "axios": "^1.12.2",
