--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,8 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "dev:backend": "powershell -NoProfile -ExecutionPolicy Bypass -Command \"Set-Location -Path ../backend; . .venv\\Scripts\\Activate.ps1; uvicorn backend.main:app --reload --port 8000\"",
-    "start": "concurrently \"\frontend\npm run dev\" \"npm run dev:backend\""
+    "dev:backend": "cd ../backend && .venv\\Scripts\\activate && uvicorn app.main:app --reload --port 8080",
+    "start": "concurrently -n \"FRONTEND,BACKEND\" -c \"green,blue\" \"npm run dev\" \"npm run dev:backend\""
   },
   "dependencies": {
     "@ffmpeg/ffmpeg": "^0.12.10",
