--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,8 @@
     "react-icons": "^5.5.0",
     "react-player": "^3.3.3",
     "react-router-dom": "^7.9.4",
+    "sweetalert2": "^11.26.3",
+    "sweetalert2-react-content": "^5.1.0",
     "tailwindcss": "^4.1.14",
     "vercel": "^48.10.2"
   },
