--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/vite": "^4.1.14",
     "@tanstack/react-query": "^5.90.2",
     "axios": "^1.12.2",
+    "baseline-browser-mapping": "^2.9.11",
     "framer-motion": "^12.23.26",
     "gsap": "^3.14.2",
     "langdetect": "^0.2.1",
