--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,9 +30,11 @@
     "react-dropzone": "^14.3.8",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.65.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-player": "^3.3.3",
     "react-router-dom": "^7.9.4",
+    "react-toastify": "^11.0.5",
     "sweetalert2": "^11.26.3",
     "sweetalert2-react-content": "^5.1.0",
     "tailwindcss": "^4.1.14",
